[package]
name = "qui-vive"
version = "0.1.0"
authors = ["Marc-André Moreau <mamoreau@devolutions.net>"]

[dependencies]
env_logger = "0.5.3"
lazy_static = "1.0.0"
futures = "0.1.17"
hyper = "0.11.13"
regex = "0.2"
log = "0.4.1"
mouscache = "0.2.0"
mouscache_derive = "0.2.0"
uuid = { version = "0.6", features = ["v4"] }
